禁用鼠标双击选中文本<body onselectstart="return false" style="-moz-user-select:none">

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>Webpack App</title>
     <link rel="stylesheet" type="text/css" href="/dist/main.css">
 </head>
-<body>
+<!-- <body onselectstart="return false" style="-moz-user-select:none">  禁用鼠标双击选中文本， firefox要用style支持 -->
+<body onselectstart="return false" style="-moz-user-select:none">
     <div id="app">
-        
+
     </div>
     <script type="text/javascript" src="/dist/main.js"></script>
 </body>
+
 </html>
